Fix overflow bug for main card

--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -39,8 +39,10 @@ div.main-card {
 
   ul {
     display: flex;
+    height: 45px;
     gap: 12px;
     width: 100%;
+    overflow-x: auto;
 
     li {
       display: flex;
